--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
             if [ ! -d "${{ secrets.DEPLOY_DIR }}/.git" ]; then
-              git clone https://github.com/<your-username>/<your-backend-repo>.git ${{ secrets.DEPLOY_DIR }}
+              git clone https://github.com/tejonidhi-wizzy/mern-backend.git ${{ secrets.DEPLOY_DIR }}
             fi
             cd ${{ secrets.DEPLOY_DIR }}
             git pull origin main
