--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,14 +19,35 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Deploy Node.js App
+      - name: Deploy Node.js App to EC2
         run: |
-          ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
-            if [ ! -d "${{ secrets.DEPLOY_DIR }}/.git" ]; then
-              git clone https://github.com/tejonidhi-wizzy/mern-backend.git ${{ secrets.DEPLOY_DIR }}
-            fi
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            # Navigate to backend directory
             cd ${{ secrets.DEPLOY_DIR }}
-            git pull origin main
+
+            # Ensure it is a git repo
+            if [ ! -d ".git" ]; then
+              echo "Directory exists but not a git repo. Cloning fresh."
+              rm -rf *
+              git clone https://github.com/tejonidhi-wizzy/mern-backend.git .
+            else
+              echo "Pulling latest changes"
+              git pull origin master
+            fi
+
+            # Install dependencies
             npm install
-            pm2 restart app || pm2 start index.js --name app
+
+            # Start or restart the app
+            if pm2 list | grep -q 'backend'; then
+              echo "Restarting existing PM2 process"
+              pm2 restart backend --update-env
+            else
+              echo "Starting new PM2 process"
+              pm2 start server.js --name backend
+            fi
+
+            # Save process list
+            pm2 save
           EOF
+
